Fix squire editor toolbar list button popup overflow

--- a/core/app/shell/src/themes/suite8/css/components/_squire-editor.scss
+++ b/core/app/shell/src/themes/suite8/css/components/_squire-editor.scss
@@ -114,6 +114,13 @@
       padding: 0 2px;
       margin: 0 1px;
 
+      &.squire-editor-list-button {
+        width: 100%;
+        line-height: 100%;
+        height: 100%;
+        justify-content: start;
+      }
+
 
       svg {
         font-size: 1.1rem;
